Fix overflow on mobile when setting a huge font size by adding `overflow: hidden;` to `#app`

--- a/src/app.css
+++ b/src/app.css
@@ -139,6 +139,7 @@ body {
 }
 
 #app {
+    overflow: hidden;
     background: var(--color-paper);
     color: var(--color-ink);
     font-family: var(--font-text);
